oc/020-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: html-openshift-app
  labels:
    app: html-openshift-app
    app.kubernetes.io/part-of: html-openshift-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: html-openshift-app
  template:
    metadata:
      labels:
        app: html-openshift-app
    spec:
      containers:
      - name: html-openshift-app
        image: ghcr.io/devin-voegele/html-openshift-app:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: auftrag-6-2-vol
          mountPath: /tmp
      volumes:
      - name: auftrag-6-2-vol
        persistentVolumeClaim:
          claimName: auftrag-6-2
